--- a/ShareBudget/Base.lproj/Main.storyboard
+++ b/ShareBudget/Base.lproj/Main.storyboard
@@ -137,10 +137,10 @@
             </objects>
             <point key="canvasLocation" x="140" y="138.98050974512745"/>
         </scene>
-        <!--View Controller-->
+        <!--Budget View Controller-->
         <scene sceneID="ERI-Km-cR9">
             <objects>
-                <viewController id="hmR-8E-o1P" sceneMemberID="viewController">
+                <viewController id="hmR-8E-o1P" customClass="BudgetViewController" customModule="ShareBudget" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="UxD-yU-rwJ"/>
                         <viewControllerLayoutGuide type="bottom" id="cN9-kn-9yv"/>
@@ -163,6 +163,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="H3B-iK-cfR"/>
+                    <connections>
+                        <outlet property="tableView" destination="Zo8-p7-DDd" id="RYH-SV-Tlm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ui6-Su-epx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
