--- a/ShareBudget/Base.lproj/Main.storyboard
+++ b/ShareBudget/Base.lproj/Main.storyboard
@@ -192,23 +192,23 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="2EM-g6-aaW">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="2EM-g6-aaW">
                                         <rect key="frame" x="15" y="35.5" width="290" height="75.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sr7-cf-p0W">
-                                                <rect key="frame" x="0.0" y="0.0" width="92" height="75.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="90.5" height="75.5"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Le-ny-fSX">
-                                                        <rect key="frame" x="0.0" y="21" width="92" height="34"/>
+                                                        <rect key="frame" x="0.0" y="21" width="90.5" height="34"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PqH-xJ-RhC">
-                                                                <rect key="frame" x="0.0" y="0.0" width="92" height="23"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="90.5" height="23"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Budget" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XTL-l5-va4">
-                                                                <rect key="frame" x="0.0" y="23" width="92" height="11"/>
+                                                                <rect key="frame" x="0.0" y="23" width="90.5" height="11"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="9"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <nil key="highlightedColor"/>
@@ -235,25 +235,25 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LqS-RP-mCS">
-                                                <rect key="frame" x="92" y="0.0" width="3.5" height="75.5"/>
+                                                <rect key="frame" x="90.5" y="0.0" width="8" height="75.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8jT-ts-d6I">
-                                                <rect key="frame" x="95.5" y="0.0" width="91.5" height="75.5"/>
+                                                <rect key="frame" x="98.5" y="0.0" width="90" height="75.5"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YIh-ly-et3">
-                                                        <rect key="frame" x="0.0" y="21" width="91.5" height="34"/>
+                                                        <rect key="frame" x="0.0" y="21" width="90" height="34"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="600" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bdi-iG-659">
-                                                                <rect key="frame" x="0.0" y="0.0" width="91.5" height="23"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="90" height="23"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Expenses" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ITm-C0-BfS">
-                                                                <rect key="frame" x="0.0" y="23" width="91.5" height="11"/>
+                                                                <rect key="frame" x="0.0" y="23" width="90" height="11"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="9"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <nil key="highlightedColor"/>
@@ -280,25 +280,25 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="=" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P7h-Pq-Ld1">
-                                                <rect key="frame" x="187" y="0.0" width="11" height="75.5"/>
+                                                <rect key="frame" x="188.5" y="0.0" width="11" height="75.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MuT-on-ycy">
-                                                <rect key="frame" x="198" y="0.0" width="92" height="75.5"/>
+                                                <rect key="frame" x="199.5" y="0.0" width="90.5" height="75.5"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t1V-uf-3gy">
-                                                        <rect key="frame" x="0.0" y="21" width="92" height="34"/>
+                                                        <rect key="frame" x="0.0" y="21" width="90.5" height="34"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="400" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ej5-24-GWN">
-                                                                <rect key="frame" x="0.0" y="0.0" width="92" height="23"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="90.5" height="23"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Balance" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mLU-h2-aBF">
-                                                                <rect key="frame" x="0.0" y="23" width="92" height="11"/>
+                                                                <rect key="frame" x="0.0" y="23" width="90.5" height="11"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="9"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <nil key="highlightedColor"/>
@@ -358,7 +358,7 @@
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LyR-X0-l2G">
                                                         <rect key="frame" x="0.0" y="47" width="100.5" height="41"/>
-                                                        <string key="text">Create a 
+                                                        <string key="text">Create 
 new expense</string>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -378,6 +378,9 @@ new expense</string>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ql-yP-LX9">
                                                 <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                                <connections>
+                                                    <action selector="createNewExpenseAction" destination="VqQ-S8-nC0" eventType="touchUpInside" id="lQb-2F-axS"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.0" green="0.66666666666666663" blue="0.75726996527777779" alpha="1" colorSpace="calibratedRGB"/>
@@ -417,6 +420,44 @@ new expense</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MJd-xf-cTI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2771.25" y="137.5"/>
+        </scene>
+        <!--Edit Expense View Controller-->
+        <scene sceneID="yda-FR-Yld">
+            <objects>
+                <viewController storyboardIdentifier="EditExpenseViewController" id="Dgl-HV-E9F" customClass="EditExpenseViewController" customModule="ShareBudget" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yri-fn-IwQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="axR-Bn-rVR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4g7-YF-iDx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="h8k-vB-kUx">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableFooterView" hidden="YES" contentMode="scaleToFill" id="6TX-yI-Dqg">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="1"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="h8k-vB-kUx" firstAttribute="top" secondItem="4g7-YF-iDx" secondAttribute="top" id="JVl-tT-QIv"/>
+                            <constraint firstItem="h8k-vB-kUx" firstAttribute="leading" secondItem="4g7-YF-iDx" secondAttribute="leading" id="kA2-Dk-jNO"/>
+                            <constraint firstAttribute="trailing" secondItem="h8k-vB-kUx" secondAttribute="trailing" id="mNc-gk-IQ1"/>
+                            <constraint firstItem="axR-Bn-rVR" firstAttribute="top" secondItem="h8k-vB-kUx" secondAttribute="bottom" id="ybo-rL-i3b"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="h8k-vB-kUx" id="p2U-za-CDm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4pR-7Z-dzb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3628.125" y="137.32394366197184"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="CaR-x0-r93">
